[package]
name = "piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.4", features = ["color", "derive", "std", "suggestions", "wrap_help"]}
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.131", features = ["derive"]}
serde_yaml = "0.8.23"
