[package]
name = "piano"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["color", "derive", "std", "suggestions", "wrap_help"]}
env_logger = "0.9"
log = "0.4"
rand = "0.8"
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
